<resources>
    <string name="app_name">酷我音乐</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="testnet">测试网络和搜索提示</string>
    <string name="testlocal">测试扫描本地音乐</string>
    <string name="alert_ok">确定</string>
    <string name="alert_exit">是否退出酷我音乐？</string>
    <string name="tab_lyric">歌词</string>
    <string name="tab_quku">曲库</string>
    <string name="tab_mine">我的</string>
    <string name="list_songname">歌曲名字</string>
    <string name="list_singername">歌手名字</string>
    <string name="list_title">播放列表</string>
    <string name="add_to_list_error">歌曲或播放列表不存在</string>
    <string name="add_to_default_overflow">默认播放列表已达到上限，清理后重试</string>
    <string name="add_to_list_overflow">添加失败，列表已达到上限</string>
    <string name="share_sina_title">新浪微博</string>
    <string name="searching">正在搜索...</string>
    <string name="search_songname">歌曲名</string>
    <string name="search_singer">歌手名</string>
    <string name="search_alert_tips">当前歌曲的歌词将被覆盖</string>
    <string name="search_ok">搜索</string>
    <string name="do_not_have_sdcard">您的设备中没有存储卡</string>
    <string name="search_edit_hint">今天你想听什么</string>
    <string name="scan_state_left">已扫描到</string>
    <string name="scan_state_right">首歌曲</string>
    <string name="scan_btn_hide">后台扫描</string>
    <string name="recommend_to_add">意见反馈</string>
    <string name="recommend_hint1">请留下您的宝贵意见和建议</string>
    <string name="recommend_hint2">请留下您的联系方式:</string>
    <string name="recommend_empty_alert">反馈意见以及联系方式不能为空</string>
    <string name="recommend_send">发送</string>
    <string name="recommend_send_failed">发送失败，请稍后再试。</string>
    <string name="recommend_send_success">发送成功，谢谢您的支持！</string>
    <string name="recommend_content_hint">请留下您的宝贵意见和建议</string>
    <string name="recommend_contact_hint">输入您的手机/QQ号/邮箱</string>
    <string name="recommend_sending">正在发送，请稍候...</string>
    <string name="about_title">关于</string>
    <string name="about_alert_content">"（Android）

2015-04-21
北京酷我科技有限公司 版权所有
Copyright ©2005-2015 Kuwo All Rights Reserved

申明：
此版本适用于Android系列设备，如在其他品牌或型号的设备上使用本软件，对于出现的任何问题，酷我公司不承担责任。本软件的缓存、安装完全免费，使用过程中产生的数据流量费用，由运营商收取。

服务地区限制说明：
非常抱歉，由于版权限制，当您在中国大陆以外地区使用酷我音乐时，将无法使用在线音乐服务，酷我音乐仅提供本地播放和管理等离线音乐服务，非常感谢您的理解。

客服QQ： 416307312
                   1598835431
客服QQ群：36297515
                      108523911
客服邮箱：sjs@kuwo.cn
客服热线：（010）82601540（10：00 – 18：30）
新浪微博：@酷我音乐
官方网址：shouji.kuwo.cn
                    wap.kuwo.cn
商务合作：markerbd@kuwo.cn
                    (010)82601782-830"</string>
    <string name="welcome_limit_date" />
    <string name="upgrade_check">检查升级</string>
    <string name="upgrade_cancel">取消升级</string>
    <string name="desk_lyric_islock_title">点击解锁桌面歌词</string>
    <string name="desk_lyric_islock_message">桌面歌词已锁定</string>
    <string name="desk_lyric_unlocked_title">点击锁定桌面歌词</string>
    <string name="desk_lyric_unlocked_message">桌面歌词已解锁</string>
    <string name="desk_lyric_notification_msg">桌面歌词已锁定，可在通知栏中或设置中解锁</string>
    <string name="desk_lyric_lock_tip">桌面歌词已关闭，可以在通知栏或设置中开启</string>
    <string name="mi_v5_tip">如遇到MIUI V5以上系统无法显示桌面歌词的情况，请返回手机桌面，找到设置>应用>酷我音乐>打开悬浮窗即可</string>
    <string name="how_wo_show_lrc">如何显示桌面歌词</string>
    <string name="notification_default">听音乐用酷我！</string>
    <string name="mv_quality_high">高清</string>
    <string name="mv_quality_low">流畅</string>
    <string name="mv_loading_tip">正在加载...</string>
    <string name="mv_change_quality">正在切换画质</string>
    <string name="nowplay_title_default">听音乐 用酷我</string>
    <string name="cropimg_savebtn_title">保存</string>
    <string name="cropimg_cancelbtn_title">取消</string>
    <string name="skin_error_hint">图片加载出错啦，换张图试试吧！</string>
    <string name="skin_settings">皮肤设置</string>
    <string name="skin_photo">拍照</string>
    <string name="skin_albums">相册</string>
    <string name="skin_no_pic">相机没有提供图片哦，请换个相机试试</string>
    <string name="vip_account_info_title">账户信息</string>
    <string name="vip_account_title">账号：</string>
    <string name="vip_type_title">VIP类型：</string>
    <string name="vip_out_of_time">已过期</string>
    <string name="vip_level_title">VIP等级：</string>
    <string name="vip_level_msg">至尊VIP享受等级成长</string>
    <string name="get_vip_free">推广期可免费领取VIP</string>
    <string name="tv_free_vip_now">立即领取</string>
    <string name="tv_upgrade_vip_now">立即升级</string>
    <string name="vip_balance_title">歌曲下载余量：</string>
    <string name="up_vip_title">升级为至尊VIP享受歌曲无限下载</string>
    <string name="vip_standard">标准VIP</string>
    <string name="vip_free">体验VIP</string>
    <string name="vip_super">至尊VIP</string>
    <string name="vip_cache_num_no_limited">无上限</string>
    <string name="renewals_vip_over">"
亲爱的%1$s:
您的酷我VIP已到期，
请及时续费，畅享酷我VIP特权
"</string>
    <string name="renewals_vip_almost_over">"
亲爱的%1$s:
您的酷我VIP将在%2$s天后到期，
请及时续费，畅享酷我VIP特权
"</string>
    <string name="update_vip">"
亲爱的%1$s:
您本月的下载歌曲限额已用完。
升级至尊VIP，畅享更多下载！
"</string>
    <string name="ape_vip_upgrade">"
亲爱的%1$s:
下载APE为至尊VIP特权。
您可以升级至尊VIP，畅享无限下载和APE下载！
"</string>
    <string name="receive_vip_tip">"下载为VIP特权，开通后才可使用。
推广期间免费领取！
"</string>
    <string name="subscribe_vip_tip">"下载为VIP特权，开通后才可使用。
"</string>
    <string name="renewal_vip_now">马上续费</string>
    <string name="what_is_offline_cache">离线收听限额是指已经缓冲完成的歌曲在离线时可以随意播放。由于唱片公司规定，一般情况下离线收听歌曲为30首，开通酷我VIP服务可以获取更高限额。</string>
    <string name="up_vip_now">马上升级</string>
    <string name="merge_rightnow">立即合并</string>
    <string name="subscribe_vip_now">开通</string>
    <string name="receive_vip_now">领取</string>
    <string name="giveup">放弃</string>
    <string name="music_share_chooser_title">分享到</string>
    <string name="music_share_default">听到这首%1$s的《%2$s》我就无法淡定了，快来听听吧(分享自@酷我音乐)！%3$s</string>
    <string name="music_share_start_pic">看到这张美图，我不淡定了！一天一个音乐故事，尽在酷我音乐！</string>
    <string name="music_share_weixin_start_pic">看到这张美图，我不淡定了！</string>
    <string name="share_contact_hint">请输入您的分享内容</string>
    <string name="alert_title_oauth_tip">取消授权提示</string>
    <string name="alert_msg_oauth_tip">是否确定取消分享到%s的设置？</string>
    <string name="sina_tip">新浪微博</string>
    <string name="tweibo_tip">腾讯微博</string>
    <string name="qzone_tip">QQ空间</string>
    <string name="wechat_share">微信分享</string>
    <string name="opt_later">以后再说</string>
    <string name="share_music_tip">分享歌曲:%s</string>
    <string name="install_immediately">马上安装</string>
    <string name="update_immediately">立即升级</string>
    <string name="noversion_msg">亲，你还没有安装微信</string>
    <string name="notnew_msg">你的微信版本太旧了，请升级到最新版本后继续分享</string>
    <string name="c_username">用户名:</string>
    <string name="c_account">账号:</string>
    <string name="c_password">密码:</string>
    <string name="c_nickname">昵称:</string>
    <string name="c_password_blank">密 码:</string>
    <string name="c_nickname_blank">昵 称:</string>
    <string name="c_new_password">新密码:</string>
    <string name="c_email">邮箱:</string>
    <string name="c_tel">手机号:</string>
    <string name="c_vercode">验证码:</string>
    <string name="c_confirm">确定</string>
    <string name="c_cancel">取消</string>
    <string name="c_close">取消</string>
    <string name="c_complete">完成</string>
    <string name="c_reget">重新获取</string>
    <string name="l_split">|</string>
    <string name="l_login_title">用户登录</string>
    <string name="l_login_qq">QQ账号</string>
    <string name="l_login_sina">新浪微博</string>
    <string name="l_login_kw">酷我账号</string>
    <string name="l_reg_at_login">免费注册</string>
    <string name="l_login">登录</string>
    <string name="l_rem_pass">记住密码</string>
    <string name="l_auto_login">自动登录</string>
    <string name="l_forget_pass">忘记密码</string>
    <string name="l_def_account">邮箱/手机号/用户名</string>
    <string name="l_def_pass">6-16位密码</string>
    <string name="l_pop_enter_account">请您输入账号</string>
    <string name="l_pop_enter_pass">请您输入密码</string>
    <string name="l_toast_login_succ">登录成功</string>
    <string name="l_toast_login_error">登录失败</string>
    <string name="l_toast_login_fail">用户名或密码错误</string>
    <string name="l_no_network">当前没有联网哦，请连接后再试</string>
    <string name="r_reg">注册</string>
    <string name="r_reg_title">注册酷我账号</string>
    <string name="r_reg_username">用户名注册</string>
    <string name="r_reg_tel">手机号注册</string>
    <string name="r_reg_email">邮箱注册</string>
    <string name="r_get_vercode">获取验证码</string>
    <string name="r_reget_vercode">重新获取验证码</string>
    <string name="r_sending_vercode">正在发送验证码</string>
    <string name="btn_update_notice">%s秒</string>
    <string name="r_reg_agree">我已阅读并同意</string>
    <string name="r_reg_prot">《注册协议》</string>
    <string name="r_reg_protocal">我已阅读并同意《注册协议》</string>
    <string name="r_reg_protocol_content">酷我注册协议</string>
    <string name="local_login_protocol_msg_1">您只有无条件接受以下所有服务条款，才能继续申请：</string>
    <string name="r_def_nick_userlogin">取个2-16位的名字吧</string>
    <string name="r_def_password_userlogin">设置6-16位密码</string>
    <string name="r_def_email">登录用的邮箱</string>
    <string name="r_pop_enter_nick">请输入昵称</string>
    <string name="r_pop_enter_password">请输入密码</string>
    <string name="r_pop_enter_email">请输入邮箱</string>
    <string name="setting_search_history_cache">搜索历史</string>
    <string name="setting_pic_cache">图片缓存</string>
    <string name="setting_lyric_cache">歌词缓存</string>
    <string name="setting_listen_quality_low">流畅音质</string>
    <string name="setting_listen_quality_high">高品音质</string>
    <string name="setting_select_defualt">自动选择</string>
</resources>