<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:id="@id/layout_input" android:background="@drawable/list_frame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:textSize="@dimen/local_main_textsize" android:textColor="@color/local_login_text_default" android:gravity="center" android:id="@id/register_tv_mail" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/c_email" android:layout_alignParentLeft="true" />
                    <cn.kuwo.ui.userinfo.auto.AutoCompleteEmailEdit android:textSize="@dimen/local_sub_textsize" android:textColorHint="@color/local_login_light_black" android:id="@id/register_edit_auto_mail" android:background="@drawable/local_login_et_style" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:hint="@string/r_def_email" android:singleLine="true" android:popupBackground="@drawable/protocal_bg" android:layout_toRightOf="@id/register_tv_mail" android:layout_centerVertical="true" android:dropDownHeight="90.0dip" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/reg_clear_mail_email" android:background="@drawable/close_login_selector" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    <TextView android:id="@id/reg_mail_err_tip" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="45.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="1.0dip">
                    <TextView android:textSize="@dimen/local_main_textsize" android:textColor="@color/local_login_text_default" android:gravity="center" android:id="@id/register_tv_nickname" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/c_nickname" android:layout_alignParentLeft="true" />
                    <EditText android:textSize="@dimen/local_sub_textsize" android:textColorHint="@color/local_login_light_black" android:id="@id/register_edit_mail_nick" android:background="@drawable/local_login_et_style" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:hint="@string/r_def_nick_userlogin" android:singleLine="true" android:layout_toRightOf="@id/register_tv_nickname" android:layout_centerVertical="true" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/reg_clear_mail_nick" android:background="@drawable/close_login_selector" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    <TextView android:id="@id/reg_mail_nick_err_tip" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="45.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="1.0dip">
                    <TextView android:textSize="@dimen/local_main_textsize" android:textColor="@color/local_login_text_default" android:gravity="center" android:id="@id/register_tv_password" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/c_password" android:layout_alignParentLeft="true" />
                    <EditText android:textSize="@dimen/local_sub_textsize" android:textColorHint="@color/local_login_light_black" android:id="@id/register_edit_mail_password" android:background="@drawable/local_login_et_style" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:hint="@string/r_def_password_userlogin" android:singleLine="true" android:layout_toRightOf="@id/register_tv_password" android:layout_centerVertical="true" android:inputType="textPassword" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/reg_clear_mail_pwd" android:background="@drawable/close_login_selector" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    <TextView android:id="@id/reg_mail_pwd_err_tip" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="45.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="1.0dip">
                    <CheckBox android:gravity="center" android:id="@id/mail_regist_cb_password" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:button="@drawable/checkbox_style" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/black33" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/l_rem_pass" android:layout_toRightOf="@id/mail_regist_cb_password" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/black33" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/r_reg_agree" android:layout_toLeftOf="@id/tv_mail_protocol" />
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="#ff46b4e7" android:gravity="center" android:id="@id/tv_mail_protocol" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/r_reg_prot" android:layout_alignParentRight="true" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout android:gravity="center" android:id="@id/register_tv_mail_doregist" android:background="@drawable/btn_reg_login_selector" android:layout_width="186.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/layout_input" android:layout_centerHorizontal="true">
                <TextView android:gravity="center_vertical" android:id="@id/register_btn_mail_doregist" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/r_reg" android:layout_centerInParent="true" style="@style/logreg_btn_white" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="@color/white50" android:gravity="bottom" android:id="@id/reg_mail_notice" android:background="@drawable/local_login_tip" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="52.0dip" android:layout_marginRight="42.0dip" android:text="@string/r_pop_enter_email" android:layout_alignRight="@id/layout_input" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white50" android:gravity="bottom" android:id="@id/reg_mail_nick_notice" android:background="@drawable/local_login_tip" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:layout_marginRight="42.0dip" android:text="@string/r_pop_enter_nick" android:layout_alignRight="@id/layout_input" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white50" android:gravity="bottom" android:id="@id/reg_mail_pwd_notice" android:background="@drawable/local_login_tip" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="148.0dip" android:layout_marginRight="42.0dip" android:text="@string/r_pop_enter_password" android:layout_alignRight="@id/layout_input" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>