<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbarStyle="outsideOverlay" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/layout_input" android:background="@drawable/list_frame" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip">
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/local_login_text_default" android:gravity="center" android:id="@id/login_tv_account" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/c_account" android:layout_alignParentLeft="true" />
                    <cn.kuwo.ui.userinfo.auto.AutoCompleteEmailEdit android:textSize="@dimen/local_sub_textsize" android:textColorHint="@color/local_login_light_black" android:id="@id/login_et_username" android:background="@drawable/local_login_et_style" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:hint="@string/l_def_account" android:singleLine="true" android:popupBackground="@drawable/protocal_bg" android:layout_toRightOf="@id/login_tv_account" android:layout_centerVertical="true" android:dropDownHeight="90.0dip" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/tv_clear_account" android:background="@drawable/close_login_selector" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    <TextView android:id="@id/tv_account_err_tip" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="45.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginTop="1.0dip">
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/local_login_text_default" android:gravity="center" android:id="@id/login_tv_password" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:text="@string/c_password" android:layout_alignParentLeft="true" />
                    <EditText android:textSize="@dimen/local_sub_textsize" android:textColorHint="@color/local_login_light_black" android:id="@id/login_et_password" android:background="@drawable/local_login_et_style" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:hint="@string/l_def_pass" android:singleLine="true" android:layout_toRightOf="@id/login_tv_password" android:layout_centerVertical="true" android:inputType="textPassword" />
                    <RelativeLayout android:gravity="center_vertical" android:id="@id/tv_clear_pwd" android:background="@drawable/close_login_selector" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                    <TextView android:id="@id/tv_pwd_err_tip" android:visibility="gone" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="45.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <RelativeLayout android:layout_gravity="center_vertical" android:background="@drawable/tv_login_default" android:layout_width="fill_parent" android:layout_height="43.0dip" android:layout_marginTop="1.0dip">
                    <CheckBox android:gravity="center" android:id="@id/login_cb_password" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginLeft="10.0dip" android:button="@drawable/checkbox_style" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/black33" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/l_rem_pass" android:layout_toRightOf="@id/login_cb_password" android:layout_centerVertical="true" />
                    <CheckBox android:gravity="center" android:id="@id/login_cb_autologin" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="5.0dip" android:button="@drawable/checkbox_style" android:layout_toLeftOf="@id/login_autologin_tv" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/local_sub_textsize" android:textColor="@color/black33" android:gravity="center_vertical" android:id="@id/login_autologin_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/l_auto_login" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
                </RelativeLayout>
            </LinearLayout>
            <RelativeLayout android:gravity="center" android:id="@id/login_btn" android:background="@drawable/btn_reg_login_selector" android:layout_width="186.0dip" android:layout_height="40.0dip" android:layout_marginTop="20.0dip" android:layout_below="@id/layout_input" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/local_main_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/text_login_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/l_login" android:layout_centerInParent="true" />
            </RelativeLayout>
            <RelativeLayout android:gravity="center" android:id="@id/forget_btn" android:background="@drawable/btn_reg_login_selector" android:layout_width="186.0dip" android:layout_height="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/login_btn" android:layout_centerHorizontal="true">
                <TextView android:textSize="@dimen/local_main_textsize" android:textColor="@color/white" android:gravity="center" android:id="@id/text_gorget_btn" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/l_forget_pass" android:layout_centerInParent="true" />
            </RelativeLayout>
            <TextView android:textSize="12.0sp" android:textColor="@color/white50" android:gravity="bottom" android:id="@id/tv_local_login_account_notice" android:background="@drawable/local_login_tip" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginRight="42.0dip" android:text="@string/l_pop_enter_account" android:layout_alignRight="@id/layout_input" />
            <TextView android:textSize="12.0sp" android:textColor="@color/white50" android:gravity="bottom" android:id="@id/tv_local_login_pwd_notice" android:background="@drawable/local_login_tip" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="68.0dip" android:layout_marginRight="42.0dip" android:text="@string/l_pop_enter_pass" android:layout_alignRight="@id/layout_input" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>