<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_gravity="top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="top" android:orientation="vertical" android:background="@drawable/list_frame" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <RelativeLayout android:id="@id/item_auto_select" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/kuwo_setting_item">
            <TextView android:textSize="@dimen/dialog_content_textsize" android:textColor="@color/list_item_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_select_defualt" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_auto_selected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/radio_button_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="@color/list_separator" />
        <RelativeLayout android:id="@id/item_low" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/kuwo_setting_item">
            <TextView android:textSize="@dimen/dialog_content_textsize" android:textColor="@color/list_item_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_listen_quality_low" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_low" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/radio_button_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="@color/list_separator" />
        <RelativeLayout android:id="@id/item_high" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/kuwo_setting_item">
            <TextView android:textSize="@dimen/dialog_content_textsize" android:textColor="@color/list_item_1" android:id="@id/text_check_update" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setting_listen_quality_high" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/radio_button_selected" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>